Tests working from CLI